--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -13,7 +13,7 @@
 //
 //  Author:       Danijel Durakovic <metayetidev@gmail.com>
 //  Created:      2026-03-04
-//  Updated:      2026-06-08
+//  Updated:      2026-06-11
 //
 //  ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 //
@@ -26,7 +26,7 @@
 	font-family: var(--font-base);
 	background-color: var(--color-content-bg);
 	color: var(--color-content-fg);
-	overflow: visible;
+	overflow: clip;
 
 	background: var(--color-content-bg);
 	background-image: var(--gradient-content-bg);
